--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -6,4 +6,26 @@
     <welcome-file-list>
         <welcome-file>views/index.jsp</welcome-file>
     </welcome-file-list>
+
+    <!--Filters-->
+    <filter>
+        <filter-name>AuthenticationFilter</filter-name>
+        <filter-class>filters.AuthenticationFilter</filter-class>
+    </filter>
+
+    <filter>
+        <filter-name>InputValidationFilter</filter-name>
+        <filter-class>filters.InputValidationFilter</filter-class>
+    </filter>
+
+    <!--Filter mappings-->
+    <filter-mapping>
+        <filter-name>AuthenticationFilter</filter-name>
+        <url-pattern>/</url-pattern>
+    </filter-mapping>
+
+    <filter-mapping>
+        <filter-name>InputValidationFilter</filter-name>
+        <url-pattern>/register</url-pattern>
+    </filter-mapping>
 </web-app>
